cambios en componentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,435 +1,16 @@
-<!--HEADER-->
-<nav class="navbar navbar-expand-lg bg-secondary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-      <img src="Assets/IMG/arg-programaLogo.png" alt="Logo Argentina Programa" class="w-75" >
-    </a>
-    <ul class="list-group list-group-horizontal"> 
-     <li class="list-group-item"><a href="https://github.com/LoreSVi/MiproyectoFrontEnd.git" target="_blank"><i class="fa-brands fa-github fa-2xl"></i></a></li> 
-     <li class="list-group-item"><a href="https://www.linkedin.com/in/lorena-vivas-966880a4/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i></a></li>
-     <li class="list-group-item"><a href="https://www.instagram.com/lorelolivs/" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a></li>
-
- <!-- Login --><!-- Login -->
- <ul class="list-group list-group-horizontal align-items-center"></ul>
-<li class="list-group-item">
-<button type="button" class="btn btn-primary btn-sm p-2">
-<i class="fa-solid fa-user-lock fa-2xl text-white" data-bs-toggle="modal"
-data-bs-target="#exampleModal"></i>
-</button>
-</li>
-
-
-         
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-<div class="modal-dialog">
-<div class="modal-content">
-<div class="modal-header">
-  <h3 class="modal-title" style="color:blue" id="exampleModalLabel">Iniciar Sesión</h3>
-  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-</div>
-<div class="modal-body">
-  <div class="mb-3 row">
-    <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="inputEmail" value="email@dominio.com" placeholder="Ingresa Email">
-    </div>
-  </div>
-  <div class="mb-3 row">
-    <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
-    <div class="col-sm-10">
-      <input type="password" class="form-control" id="inputPassword" placeholder="Ingresa Contraseña">
-    </div>
-  </div>
-</div>
-<div class="modal-footer">
-  <button type="button" class="btn btn-primary">Iniciar Sesion</button>
-</div>
-</div>
-</div>
-</div>
-</nav>
-
-<!--Seccion Banner-->
-<div class="presentacion" id="primer-tarjeta">
-<div id="perfil-fondo"><img src="Assets/IMG/imagenfondoazul.jpg"></div>
-
-<div id="info-img">
-  <img class="imagen-perfil" src="Assets/IMG/mifoto.jpg">
-  <div class="btn-edit"><a href="#" class="btn-right"><i class="fa fa-pen"></i></a></div>
-</div>
-<div class="info-datos">
-    <h2>Soy</h2>
-<h1>Lorena&nbsp; Susana&nbsp; Vivas</h1>
-<h3>Desarrolladora Full Stack Jr.</h3>
-</div>
-</div>
-
-
-<div class="segunda-tarjeta">
-<!--Sección Barra de Navegación-->
-<nav>
-  <ul class="navegacion">
-    <li><button type="button" class="btn btn-dark"><a href="#sobre-mi" class="nav-link">Acerca de Mí</a></button></li>
-    <li><button type="button" class="btn btn-dark"><a href="#experiencia" class="nav-link">Experiencia</a></button></li>
-    <li><button type="button" class="btn btn-dark"><a href="#Educacion" class="nav-link">Educación</a></button></li>
-    <li><button type="button" class="btn btn-dark"><a href="#Habilidades" class="nav-link">Habilidades</a></button></li>
-    <li><button type="button" class="btn btn-dark"><a href="#proyectos" class="nav-link">Proyectos</a></button></li>
-    <li><button type="button" class="btn btn-dark"><a href="#contacto" class="nav-link">Contacto</a></button></li>
-  </ul>
-</nav>
-
-
-<!--Sobre mi-->
-<div id="sobre-mi" class="Sobre-mi">
-    <h2>Acerca de</h2>
-    <div class="btn-edit"><a href="#" class="btn-right"><i class="fa fa-pen"></i></a></div>
-
- <div>
-    <h6>
-      Soy y una persona trabajadora y versátil, siendo capaz de adaptarme a cualquier ambiente,
-siempre dispuesta a aprender nuevas habilidades.
-Soy Docente y Técnica Bibliotecaria, y hace dos años empecé a sentirme interesada en
-el ámbito IT.
-Comencé a capacitarme en principio de forma autodidacta pero actualmente, además
-estoy cursando Argentina Programa Desarrollador Full Stack Jr. Y cursos en coderHouse.
-Soy muy amable, servicial y educada.
-Dispuesta a adquirir nuevos conocimientos que contribuyan a mi crecimiento personal
-y profesional.
-En estos momentos estoy en la búsqueda de un puesto dentro del sector IT donde
-poder desplegar mis habilidades blandas, así como las técnicas adquiridas hasta el momento
-y poder seguir enriqueciendo mi conocimiento como desarrolladora.
-    </h6>
-    <br>
-  </div>
-</div>
-
-<!--Sección Experiencia-->
-<div id="experiencia"  class="experiencia">
-<h2>Experiencia Laboral</h2>
-</div>
-      <div class="mi-experiencia">
-       <div class="card mb-3" style="max-width: 540px;">
-        <div class="row g-0" id="tarjeta-experiencia">
-          <div class="col-md-4">
-            <img src="Assets/IMG/gcba.png" class="img-fluid rounded-start" alt="Escudo GCBA">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="empleo">Docente</h5>
-              <p class="descripcion-empleo">Tareas administrativas, tareas de asistencia a la conducción prosecretaría y secretaria, Técnica Auxiliar Bibliotecaria y clases de Educación Fisica</p>
-              <p class="institucion-empleo">GCBA Ministerio de Educación</p> 
-              <p class="tipo-empleo">Jornada completa</p> 
-              <p class="fecha-empleo">Octubre 2012-actualidad</p> 
-              <button type="button" class="btn btn-light"><a href="#" class="experiencia-laboral">Agregar Experiencia</a></button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="mi-experiencia">
-      <div class="card mb-3" style="max-width: 540px;">
-       <div class="row g-0" id="tarjeta-experiencia">
-         <div class="col-md-4">
-           <img src="Assets/IMG/megatlonlogo.jpg" class="img-fluid rounded-start" alt="Escudo GCBA">
-         </div>
-         <div class="col-md-8">
-           <div class="card-body">
-             <h5 class="empleo">Profesora y Entrenadora</h5>
-             <p class="descripcion-empleo">Personal Trainer, Sala de musculación, clases varias, localizada, gap, natación, etc..</p>
-             <p class="institucion-empleo">Megatlón</p> 
-             <p class="tipo-empleo">Jornada completa</p> 
-             <p class="fecha-empleo">Mayo2005-Nov2012</p> 
-             <button type="button" class="btn btn-light"><a href="#" class="experiencia-laboral">Agregar Experiencia</a></button>
-           </div>
-         </div>
-       </div>
-     </div>
-   </div>
-
-
-
-<!--Seccion Educación-->
-<div id="Educacion" class="Educacion">
-<h2>Educación</h2>
-</div>
-
-
-<div class="mi-educacion">
-<div class="card mb-3" style="max-width: 540px;">
-<div class="row g-0" id="tarjeta-educacion">
-<div class="col-md-4">
- <img src="Assets/IMG/arg-programaLogo.png" class="img-fluid rounded-start" alt="argenitna programa logo">
-</div>
-<div class="col-md-8">
- <div class="card-body">
-   <h5 class="empleo">Desarrolladora Full Stack Jr.</h5>
-   <p class="descripcion-educacion">FrontEnd, BackEnd, Base de datos</p>
-   <p class="institucion-educacion">Argentina Programa</p> 
-   <p class="fecha-educacion">Febrero 2022-actualidad</p> 
-   <button type="button" class="btn btn-light"><a href="#" class="mi-nueva-capacitacion">Agregar Educación</a></button>
- </div>
-</div>
-</div>
-</div>
-</div>
-
-<div class="mi-educacion">
-<div class="card mb-3" style="max-width: 540px;">
-<div class="row g-0" id="tarjeta-educacion">
-<div class="col-md-4">
- <img src="Assets/IMG/coderhouselogo.png" class="img-fluid rounded-start" alt="argenitna programa logo">
-</div>
-<div class="col-md-8">
- <div class="card-body">
-   <h5 class="empleo">JavaScript</h5>
-   <p class="descripcion-educacion">Simulador interactivo</p>
-   <p class="institucion-educacion">CoderHouse</p> 
-   <p class="fecha-educacion">septiembre-actualidad</p> 
-   <button type="button" class="btn btn-light"><a href="#" class="mi-nueva-capacitacion">Agregar Educación</a></button>
- </div>
-</div>
-</div>
-</div>
-</div>
-
-<div class="mi-educacion">
-<div class="card mb-3" style="max-width: 540px;">
-<div class="row g-0" id="tarjeta-educacion">
-<div class="col-md-4">
- <img src="Assets/IMG/logolinkedin.png" class="img-fluid rounded-start" alt="argenitna programa logo">
-</div>
-<div class="col-md-8">
- <div class="card-body">
-   <h5 class="empleo">Aprende SCRUM</h5>
-   <p class="descripcion-educacion">Metodología Ágil de Gestión de proyectos roles, herramientas, implementación.</p>
-   <p class="institucion-educacion">LinkedIn</p> 
-   <p class="fecha-educacion">Junio 2022</p> 
-   <a href="https://www.linkedin.com/learning/certificates/2bd3e2c25632c2defc31258c923e07b5d41473ac5add71d8399752454ff7c79f">Credencial</a>
-   <button type="button" class="btn btn-light"><a href="#" class="mi-nueva-capacitacion">Agregar Educación</a></button>
- </div>
-</div>
-</div>
-</div>
-</div>
-
-<div class="mi-educacion">
-<div class="card mb-3" style="max-width: 540px;">
-<div class="row g-0" id="tarjeta-educacion">
-<div class="col-md-4">
- <img src="Assets/IMG/googleactivatelogo1.png" class="img-fluid rounded-start" alt="argenitna programa logo">
-</div>
-<div class="col-md-8">
- <div class="card-body">
-   <h5 class="empleo">Desarrollo de Apps Móviles</h5>
-   <p class="descripcion-educacion">Diseño y creación de apps, plataformas de desarrollo, comercialización y análisis de usuarios</p>
-   <p class="institucion-educacion">Google Actívate</p> 
-   <p class="fecha-educacion">febrero 2022</p> 
-   <a href="https://learndigital.withgoogle.com/activate/validate-certificate-code"> credencialID MMY EJ6 F5M</a>
-   <button type="button" class="btn btn-light"><a href="#" class="mi-nueva-capacitacion">Agregar Educación</a></button>
- </div>
-</div>
-</div>
-</div>
-</div>
-
-<div class="mi-educacion">
-<div class="card mb-3" style="max-width: 540px;">
-<div class="row g-0" id="tarjeta-educacion">
-<div class="col-md-4">
- <img src="Assets/IMG/googleactivatelogo1.png" class="img-fluid rounded-start" alt="argenitna programa logo">
-</div>
-<div class="col-md-8">
- <div class="card-body">
-   <h5 class="empleo">Protege tu negocio: Ciberseguridad en el Teletrabajo</h5>
-   <p class="descripcion-educacion">Teletrabajo seguro para el empleador y el empleado, fraudes y otros incidentes.</p>
-   <p class="institucion-educacion">Google Actívate</p> 
-   <p class="fecha-educacion">febrero 2022</p> 
-   <a href="https://learndigital.withgoogle.com/link/1nur091p2ww"> credencialID BIO 5Y8 M6S</a>
-   <button type="button" class="btn btn-light"><a href="#" class="mi-nueva-capacitacion">Agregar Educación</a></button>
- </div>
-</div>
-</div>
-</div>
-</div>
-
-<!--Seccion Habilidades-->
-<div class="Habilidades" id="Habilidades"></div>
-<h2>Hard & Soft Skills</h2>
-<div class="btn-edit"><a href="#" class="btn-right"><i class="fa fa-pen"></i></a></div>
-<div class="contenedor-habilidades">
-     <div class="container text-center">
-
-    </div>
-  </div>
+<app-header></app-header>
+<app-banner></app-banner>
+<app-acerca-de></app-acerca-de>
+<app-experiencia></app-experiencia>
+<app-educacion></app-educacion>
+<app-hard-soft-skills></app-hard-soft-skills>
+<app-proyectos></app-proyectos>
 
  
-<!--Barras de Progreso-->
-<div class="Barras de progreso" id="tituloBarrasProgress" style="padding: 25px">
-</div>
-<div class="skills-container">
-<div class="container">
-<form class="row mb-3">
-<h5>HTML</h5>
-<div class="icono">
-<li class="list-group-item"><i class="fa-brands fa-html5 fa-2xl"></i></li> 
-</div>
-<div class="progress">
-<div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">75%</div>
-</div>
+  
+        
+     
 
-<h5>CSS</h5>
-<div class="icono">
-  <li class="list-group-item"><i class="fa-brands fa-css3-alt fa-2xl"></i></li>
-</div>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 70%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">70%</div>
-</div>
+  <!--Barras de Progreso-->
 
-<h5>JavaScript</h5>
-<div class="icono"><li class="list-group-item"><i class="fa-brands fa-square-js fa-2xl"></i></li>
-</div>
-  <div class="progress">
-    <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">80%</div>
-  </div>
-
-
-<h5>Boostrap</h5>
-<div class="icono"><li class="list-group-item"><i class="fa-brands fa-bootstrap fa-2xl"></i></li> 
-</div>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">80%</div>
-</div>
-
-<h5>Angular</h5>
-<div class="icono"><li class="list-group-item"><i class="fa-brands fa-angular fa-2xl"></i></li> 
-</div>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 70%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">70%</div>
-</div>
-
-<h5>GitHub</h5>
-<div class="icono"><li class="list-group-item"><i class="fa-brands fa-github fa-2xl"></i></li>
-</div>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">90%</div>
-</div>
-
-</div>
-</form>
-</div>
-
-
-<!--Sección Proyectos-->
-<div class="proyectos" id="proyectos">
-<h2>Proyectos</h2> 
-</div>
-<div class="row row-cols-1 row-cols-md-2 g-4">
-<div class="col">
-  <div class="card-proyecto">
-    <img src="Assets/IMG/capturaportfolio.png" class="card-img-top" alt="foto portfolio">
-    <div class="card-body">
-      <h5 class="card-title">Mi Portfolio Web</h5>
-      <p class="card-text">Este es mi portfolio web donde pueden ver todos mis proyectos y datos acerca de mi.</p>
-      <a href="#" class="btn btn-primary">Toca acá para ver</a>
-    </div>
-  </div>
-</div>
-<div class="col">
-  <div class="card-proyecto">
-    <img src="Assets/IMG/simuladorcoder1.png" class="card-img-top" alt="simulador de compra">
-    <div class="card-body">
-      <h5 class="card-title">Simulador de compra</h5>
-      <p class="card-text">Este es un primer trabajo con JavaScript, es un simulador de eleccion de porducto y compra aplicando cuotas.</p>
-      <a href="#" class="btn btn-primary">Tocá aca para ver</a>
-    </div>
-  </div>
-</div>
-<div class="col">
-  <div class="card-proyecto">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
-  </div>
-</div>
-<div class="col">
-  <div class="card-proyecto">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
-  </div>
-</div>
-</div>
-
-
-<!--Sección Contacto-->
-
-<section class="contacto" id="contacto">
-<h2>Contactame</h2>
-<div class="formulario-contacto-contenedor">
-  <div class="formulario-contacto">
-    <div class=" col-md-6 tm-contact-left">
-    <form action="https://formspree.io/f/xyylngw" method="POST">
-      <div class="control-formulario mb-3">
-        <label for="name">Nombre</label>
-        <input
-          type="text"
-          id="name"
-          name="sender-name"
-          placeholder="Escribe tu nombre"
-          class="input-field"
-          required
-        />
-      </div>
-      <div class="control-formulario mb-3">
-        <label for="email">Correo Electrónico</label>
-        <input
-          type="email"
-          id="email"
-          name="sender-email"
-          placeholder="Ingreso tu correo electrónico"
-          class="input-field"
-          required
-        />
-      </div>
-      <div class="control-formulario mb-3">
-        <label for="mensaje">Mensaje</label>
-        <textarea
-          id="mensaje"
-          cols="60"
-          rows="10"
-          placeholder="Escribe tu mensaje"
-          name="mensaje"
-          class="input-field"
-          required
-        ></textarea>
-      </div>
-      <input
-        type="submit"
-        value="Enviar"
-        id="submit-btn"
-        class="submit-btn"
-      />
-    </form>
-  </div>
-</div>
-<div class="col-md-6 tm-contact-right">
-  <p><span class="mb-4">email: loresuvivas@gmail.com></span>
-      <br> 
-      <Span class="mb-4">cel: 1159580053</Span>
-      <span>Buenos Aires (Argentina)</span>
-</div>
-</div>
-</section>
-
-
-<!--Sección vuelve al comienzo-->
-
-<!--Sección Footer-->
+  
