cambios de estilos

--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -25,11 +25,11 @@
         </div>
         <div class="col">
           <div class="card-proyecto">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="../assets/IMG/ecomerce.png" class="card-img-top" alt="Ecomerce1">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Ecomerce</h5>
+              <p class="card-text">Fue un trabajo para el curso de JavaScript de CoderHouse. Logueo, seleccion de productos, agregar carrito, costo total de lo seleccionado. etc.</p>
+              <a href="#" class="btn btn-primary">Tocá para ver</a>
             </div>
           </div>
         </div>
