--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,9 +1,14 @@
  <!--Seccion Educación-->
  <div id="Educacion" class="Educacion">
+  <br>
+  <br>
     <h2>Educación</h2>
+    <br>
   </div>
 
-   
+  <div class="container text-center">
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+     <div class="col">
 <div class="mi-educacion">
 <div class="card mb-3" style="max-width: 540px;">
  <div class="row g-0" id="tarjeta-educacion">
@@ -22,7 +27,8 @@
  </div>
 </div>
 </div>
-
+</div>
+<div class="col">
 <div class="mi-educacion">
 <div class="card mb-3" style="max-width: 540px;">
  <div class="row g-0" id="tarjeta-educacion">
@@ -42,6 +48,8 @@
 </div>
 </div>
 
+</div>
+<div class="col">
 <div class="mi-educacion">
 <div class="card mb-3" style="max-width: 540px;">
  <div class="row g-0" id="tarjeta-educacion">
@@ -62,6 +70,8 @@
 </div>
 </div>
 
+</div>
+<div class="col">
 <div class="mi-educacion">
 <div class="card mb-3" style="max-width: 540px;">
  <div class="row g-0" id="tarjeta-educacion">
@@ -82,6 +92,8 @@
 </div>
 </div>
 
+</div>
+<div class="col">
 <div class="mi-educacion">
 <div class="card mb-3" style="max-width: 540px;">
  <div class="row g-0" id="tarjeta-educacion">
@@ -99,6 +111,9 @@
      </div>
    </div>
  </div>
+</div>
+</div>
+
 </div>
 </div>
 
