--- a/src/styles.css
+++ b/src/styles.css
@@ -10,30 +10,41 @@ body {
 }
 
 
-    i.fa-brands.fa-instagram.fa-2xl:hover{
+    i.fa-brands.fa-instagram.fa-3x:hover{
     color: blueviolet;
     }
-    i.fa-brands.fa-linkedin.fa-2xl:hover{
+
+    i.fa-brands.fa-linkedin.fa-3x:hover{
         color:aqua;
     }
-    i.fa-brands.fa-github.fa-2xl:hover{
+    i.fa-brands.fa-github.fa-3x:hover{
         color:rgb(216, 133, 24);
     }
-    i.fa-solid.fa-user-lock.fa-2xl:hover{
+    i.fa-solid.fa-user-lock.fa-3x:hover{
         color:rgb(29, 29, 63);
     }
-.list-group{
- --bs-list-group-bg: transparent;
-}
-.list-group{
---bs-list-group-border-width: none;
-}
+
+    .list-group-item{
+      --bs-list-group-bg: transparent;
+     --bs-list-group-border-width: none;
+     }
+
  
  #primer-tarjeta {
     border-radius: 32px;
     margin:10 px 10px;
     padding: 20px;
     border-color:rgb(0, 132, 255);
+}
+
+.yo {
+  text-align: center;
+  margin-top: -300px;
+}
+h6{
+  padding-left: 10rem;
+  padding-right: 10rem;
+  text-align: center;
 }
 
 .presentacion.tarjeta#primera{
@@ -44,10 +55,6 @@ div#fondo-perfil{
     z-index:1;
 }
 
-.yo {
-  text-align: center;
-  margin-top: -300px;
-}
 
 div#perfil-fondo img {
 width:100%;
