cambios hard and Softskills

--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -5,10 +5,10 @@
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
           <div class="card-proyecto">
-            <img src="../assets/IMG/capturaportfolio.png" class="card-img-top" alt="foto portfolio">
+            <img src="../assets/IMG/FrontEndArgProg.png" class="card-img-top" alt="foto portfolio">
             <div class="card-body">
-              <h5 class="card-title">Mi Portfolio Web</h5>
-              <p class="card-text">Este es mi portfolio web donde pueden ver todos mis proyectos y datos acerca de mi.</p>
+              <h5 class="card-title">Mi Portfolio FrontEnd</h5>
+              <p class="card-text">Esta es la parte FontEnd del Proyecto Integrador para Argentina Programa que consta de un Portfolio web, dónde trabaje con Angular, CSS, HTML, TypeScript, etc.</p>
               <a href="#" class="btn btn-primary">Toca acá para ver</a>
             </div>
           </div>
@@ -22,7 +22,7 @@
               <a href="#" class="btn btn-primary">Tocá aca para ver</a>
             </div>
           </div>
-        </div>
+        </div>s
         <div class="col">
           <div class="card-proyecto">
             <img src="../assets/IMG/ecomerce.png" class="card-img-top" alt="Ecomerce1">
@@ -38,7 +38,7 @@
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Este es mi portfolio web donde pueden ver todos mis proyectos y datos acerca de mi </p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
