--- a/src/styles.css
+++ b/src/styles.css
@@ -72,12 +72,13 @@ border-radius: 32px 32px 32px 32px;
 }
 
 #tarjeta-experiencia {
-  background-color: rgb(116, 88, 141);
+  background: linear-gradient(90deg, rgb(196, 185, 194) 14%, rgb(221, 154, 208) 35%, rgba(241,160,226,0.20818749863226538) 64%);
 }
 
 #tarjeta-educacion {
-  background-color: rgb(81, 81, 166);
+  background: linear-gradient(90deg, rgb(145, 196, 205) 35%, rgba(241,160,226,0.20818749863226538) 64%);
 }
+
 .Habilidades {
     padding: 2rem; 
     }
@@ -87,7 +88,7 @@ padding-bottom: 1rem;
 }
 
 .card-proyecto {
-  background-color: rgb(235, 124, 216);
+  background-color: rgb(167, 150, 173);
 }
 .navegacion{
     position: sticky;
