--- a/src/app/components/hard-soft-skills/hard-soft-skills.component.html
+++ b/src/app/components/hard-soft-skills/hard-soft-skills.component.html
@@ -1,1 +1,165 @@
-<p>hard-soft-skills works!</p>
+<div class="row">
+    <h1>Hard & Soft Skills</h1>
+    <div class="col-sm-4 col-md-4 col-lg-4">
+    <circle-progress
+    [percent]="85"
+    [radius]="70"
+    [showImage]="true"
+    [imageSrc]="'../assets/IMG/html.png'"
+    [imageHeight]="60"
+    [imageWidth]="60"
+    [showUnits]="false"
+    [showSubtitle]="false"
+    [outerStrokeWidth]="10"
+    [innerStrokeWidth]="4"
+    [outerStrokeColor]="'orange'"
+    [innerStrokeColor]="'#C7E596'"
+    [animation]="true"
+    [animationDuration]="500"
+  ></circle-progress>  
+</div>
+<div class="col-sm-4 col-md-4 col-lg-4">
+    <circle-progress
+    [percent]="85"
+    [radius]="70"
+    [showImage]="true"
+    [imageSrc]="'../assets/IMG/html.png'"
+    [imageHeight]="60"
+    [imageWidth]="60"
+    [showUnits]="false"
+    [showSubtitle]="false"
+    [outerStrokeWidth]="10"
+    [innerStrokeWidth]="4"
+    [outerStrokeColor]="'dodgerblue'"
+    [innerStrokeColor]="'#C7E596'"
+    [animation]="true"
+    [animationDuration]="500"
+  ></circle-progress>  
+</div>
+<div class="col-sm-4 col-md-4 col-lg-4">
+    <circle-progress
+    [percent]="85"
+    [radius]="70"
+    [showImage]="true"
+    [imageSrc]="'../assets/IMG/html.png'"
+    [imageHeight]="60"
+    [imageWidth]="60"
+    [showUnits]="false"
+    [showSubtitle]="false"
+    [outerStrokeWidth]="10"
+    [innerStrokeWidth]="4"
+    [outerStrokeColor]="'yellow'"
+    [innerStrokeColor]="'#C7E596'"
+    [animation]="true"
+    [animationDuration]="500"
+  ></circle-progress>  
+</div>
+<div class="col-sm-4 col-md-4 col-lg-4">
+    <circle-progress
+    [percent]="85"
+    [radius]="70"
+    [showImage]="true"
+    [imageSrc]="'../assets/IMG/html.png'"
+    [imageHeight]="60"
+    [imageWidth]="60"
+    [showUnits]="false"
+    [showSubtitle]="false"
+    [outerStrokeWidth]="10"
+    [innerStrokeWidth]="4"
+    [outerStrokeColor]="'indigo'"
+    [innerStrokeColor]="'#C7E596'"
+    [animation]="true"
+    [animationDuration]="500"
+  ></circle-progress>  
+</div>
+<div class="col-sm-4 col-md-4 col-lg-4">
+    <circle-progress
+    [percent]="85"
+    [radius]="70"
+    [showImage]="true"
+    [imageSrc]="'../assets/IMG/html.png'"
+    [imageHeight]="60"
+    [imageWidth]="60"
+    [showUnits]="false"
+    [showSubtitle]="false"
+    [outerStrokeWidth]="10"
+    [innerStrokeWidth]="4"
+    [outerStrokeColor]="'red'"
+    [innerStrokeColor]="'#C7E596'"
+    [animation]="true"
+    [animationDuration]="500"
+  ></circle-progress>  
+</div>
+<div class="col-sm-4 col-md-4 col-lg-4">
+    <circle-progress
+    [percent]="85"
+    [radius]="70"
+    [showImage]="true"
+    [imageSrc]="'../assets/IMG/html.png'"
+    [imageHeight]="60"
+    [imageWidth]="60"
+    [showUnits]="false"
+    [showSubtitle]="false"
+    [outerStrokeWidth]="10"
+    [innerStrokeWidth]="4"
+    [outerStrokeColor]="'magenta'"
+    [innerStrokeColor]="'#C7E596'"
+    [animation]="true"
+    [animationDuration]="500"
+  ></circle-progress>  
+</div>
+<div class="col-sm-4 col-md-4 col-lg-4">
+    <circle-progress
+    [percent]="85"
+    [radius]="70"
+    [showImage]="true"
+    [imageSrc]="'../assets/IMG/html.png'"
+    [imageHeight]="60"
+    [imageWidth]="60"
+    [showUnits]="false"
+    [showSubtitle]="false"
+    [outerStrokeWidth]="10"
+    [innerStrokeWidth]="4"
+    [outerStrokeColor]="'salmon'"
+    [innerStrokeColor]="'#C7E596'"
+    [animation]="true"
+    [animationDuration]="500"
+  ></circle-progress>  
+</div>
+<div class="col-sm-4 col-md-4 col-lg-4">
+    <circle-progress
+    [percent]="85"
+    [radius]="70"
+    [showImage]="true"
+    [imageSrc]="'../assets/IMG/html.png'"
+    [imageHeight]="60"
+    [imageWidth]="60"
+    [showUnits]="false"
+    [showSubtitle]="false"
+    [outerStrokeWidth]="10"
+    [innerStrokeWidth]="4"
+    [outerStrokeColor]="'salmon'"
+    [innerStrokeColor]="'#C7E596'"
+    [animation]="true"
+    [animationDuration]="500"
+  ></circle-progress>  
+</div>
+<div class="col-sm-4 col-md-4 col-lg-4">
+    <circle-progress
+    [percent]="85"
+    [radius]="70"
+    [showImage]="true"
+    [imageSrc]="'../assets/IMG/html.png'"
+    [imageHeight]="60"
+    [imageWidth]="60"
+    [showUnits]="false"
+    [showSubtitle]="false"
+    [outerStrokeWidth]="10"
+    [innerStrokeWidth]="4"
+    [outerStrokeColor]="'salmon'"
+    [innerStrokeColor]="'#C7E596'"
+    [animation]="true"
+    [animationDuration]="500"
+  ></circle-progress>  
+</div>
+</div>
