hardysoft and footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,12 +5,12 @@
 <app-educacion></app-educacion>
 <app-hard-soft-skills></app-hard-soft-skills>
 <app-proyectos></app-proyectos>
-
+<app-footer></app-footer>
  
   
         
      
 
-  <!--Barras de Progreso-->
+ 
 
   
