--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -1,23 +1,28 @@
   <!--Sobre mi-->
   <div id="sobre-mi" class="Sobre-mi">
     <br>
-    <h2>Acerca de</h2>
+    <h2>Acerca de mí</h2>
     <div class="btn-edit"><a href="#" class="btn-right"><i class="fa fa-pen"></i></a></div>
 
  <div>
     <h6>
       Soy y una persona trabajadora y versátil, siendo capaz de adaptarme a cualquier ambiente,
-siempre dispuesta a aprender nuevas habilidades.
-Soy Docente y Técnica Bibliotecaria, y hace dos años empecé a sentirme interesada en
-el ámbito IT.
-Comencé a capacitarme en principio de forma autodidacta pero actualmente, además
-estoy cursando Argentina Programa Desarrollador Full Stack Jr. Y cursos en coderHouse.
-Soy muy amable, servicial y educada.
-Dispuesta a adquirir nuevos conocimientos que contribuyan a mi crecimiento personal
-y profesional.
-En estos momentos estoy en la búsqueda de un puesto dentro del sector IT donde
-poder desplegar mis habilidades blandas, así como las técnicas adquiridas hasta el momento
-y poder seguir enriqueciendo mi conocimiento como desarrolladora.
+      siempre dispuesta a aprender nuevas habilidades.
+     Hace dos años empecé a sentirme interesada en el ámbito IT,
+     comencé a capacitarme en principio de forma autodidacta pero actualmente, 
+     estoy en la etapa final en Argentina Programa Yo Programo
+     donde obtendría el Título de  Desarrollador Full Stack Jr. 
+     También estoy haciendo cursos en CoderHouse, ya complete el de JavaScript y creé mi 
+     Pequeño Ecomerce. Mi idea es hacer en Coder la carrera de Desarrollo de Aplicaciones.
+     Antes de esto mis trabajos fueron y son muy distintos… Soy Docente y Técnica Bibliotecaria,
+     Por tanto mis experiencias laborales anteriores son en Gimnasios, Escuelas, Bibliotecas, 
+     Colonias de Verano, animaciones de Fiestas. 
+     Poseo habilidades para el trabajo en equipo, soy una persona curiosa, me gusta aprender
+     cosas nuevas, cambiar mi rumbo lo sentía un desafío y acá estoy tratando de dar todo de mi.
+     Soy amable, servicial y educada.
+     Estoy ansiosa por adquirir nuevos conocimientos que contribuyan a mi crecimiento personal 
+     y profesional.
+     
     </h6>
     <br>
   </div>
