--- a/src/app/components/hard-soft-skills/hard-soft-skills.component.html
+++ b/src/app/components/hard-soft-skills/hard-soft-skills.component.html
@@ -1,5 +1,9 @@
+ <!--Barras de Progreso-->
+ <div id="habilidades"  class="habilidades">
+  <h2>Hard & Soft Skills</h2>
+  <br>
+   </div>
 <div class="row">
-    <h1>Hard & Soft Skills</h1>
     <div class="col-sm-4 col-md-4 col-lg-4">
     <circle-progress
     [percent]="85"
@@ -23,9 +27,9 @@
     [percent]="85"
     [radius]="70"
     [showImage]="true"
-    [imageSrc]="'../assets/IMG/html.png'"
-    [imageHeight]="60"
-    [imageWidth]="60"
+    [imageSrc]="'../assets/IMG/css.png'"
+    [imageHeight]="50"
+    [imageWidth]="75"
     [showUnits]="false"
     [showSubtitle]="false"
     [outerStrokeWidth]="10"
@@ -41,7 +45,7 @@
     [percent]="85"
     [radius]="70"
     [showImage]="true"
-    [imageSrc]="'../assets/IMG/html.png'"
+    [imageSrc]="'../assets/IMG/javascript.png'"
     [imageHeight]="60"
     [imageWidth]="60"
     [showUnits]="false"
@@ -59,14 +63,14 @@
     [percent]="85"
     [radius]="70"
     [showImage]="true"
-    [imageSrc]="'../assets/IMG/html.png'"
+    [imageSrc]="'../assets/IMG/github.png'"
     [imageHeight]="60"
     [imageWidth]="60"
     [showUnits]="false"
     [showSubtitle]="false"
     [outerStrokeWidth]="10"
     [innerStrokeWidth]="4"
-    [outerStrokeColor]="'indigo'"
+    [outerStrokeColor]="'black'"
     [innerStrokeColor]="'#C7E596'"
     [animation]="true"
     [animationDuration]="500"
@@ -77,7 +81,7 @@
     [percent]="85"
     [radius]="70"
     [showImage]="true"
-    [imageSrc]="'../assets/IMG/html.png'"
+    [imageSrc]="'../assets/IMG/angular.png'"
     [imageHeight]="60"
     [imageWidth]="60"
     [showUnits]="false"
@@ -95,7 +99,25 @@
     [percent]="85"
     [radius]="70"
     [showImage]="true"
-    [imageSrc]="'../assets/IMG/html.png'"
+    [imageSrc]="'../assets/IMG/bootstrap.png'"
+    [imageHeight]="60"
+    [imageWidth]="60"
+    [showUnits]="false"
+    [showSubtitle]="false"
+    [outerStrokeWidth]="10"
+    [innerStrokeWidth]="4"
+    [outerStrokeColor]="'indigo'"
+    [innerStrokeColor]="'#C7E596'"
+    [animation]="true"
+    [animationDuration]="500"
+  ></circle-progress>  
+</div>
+<div class="col-sm-4 col-md-4 col-lg-4">
+    <circle-progress
+    [percent]="85"
+    [radius]="70"
+    [showImage]="true"
+    [imageSrc]="'../assets/IMG/empatia.png'"
     [imageHeight]="60"
     [imageWidth]="60"
     [showUnits]="false"
@@ -113,14 +135,14 @@
     [percent]="85"
     [radius]="70"
     [showImage]="true"
-    [imageSrc]="'../assets/IMG/html.png'"
+    [imageSrc]="'../assets/IMG/resolucionconflict.png'"
     [imageHeight]="60"
     [imageWidth]="60"
     [showUnits]="false"
     [showSubtitle]="false"
     [outerStrokeWidth]="10"
     [innerStrokeWidth]="4"
-    [outerStrokeColor]="'salmon'"
+    [outerStrokeColor]="'greenYellow'"
     [innerStrokeColor]="'#C7E596'"
     [animation]="true"
     [animationDuration]="500"
@@ -131,27 +153,9 @@
     [percent]="85"
     [radius]="70"
     [showImage]="true"
-    [imageSrc]="'../assets/IMG/html.png'"
+    [imageSrc]="'../assets/IMG/trabajoenequipo.png'"
     [imageHeight]="60"
-    [imageWidth]="60"
-    [showUnits]="false"
-    [showSubtitle]="false"
-    [outerStrokeWidth]="10"
-    [innerStrokeWidth]="4"
-    [outerStrokeColor]="'salmon'"
-    [innerStrokeColor]="'#C7E596'"
-    [animation]="true"
-    [animationDuration]="500"
-  ></circle-progress>  
-</div>
-<div class="col-sm-4 col-md-4 col-lg-4">
-    <circle-progress
-    [percent]="85"
-    [radius]="70"
-    [showImage]="true"
-    [imageSrc]="'../assets/IMG/html.png'"
-    [imageHeight]="60"
-    [imageWidth]="60"
+    [imageWidth]="90"
     [showUnits]="false"
     [showSubtitle]="false"
     [outerStrokeWidth]="10"
