--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -1,6 +1,9 @@
  <!--Sección Proyectos-->
  <div class="proyectos" id="proyectos">
     <h2>Proyectos</h2> 
+    <br>
+    <p>Los podes ver en mi Github</p>
+    <br>
       </div>
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
@@ -9,7 +12,6 @@
             <div class="card-body">
               <h5 class="card-title">Mi Portfolio FrontEnd</h5>
               <p class="card-text">Esta es la parte FontEnd del Proyecto Integrador para Argentina Programa que consta de un Portfolio web, dónde trabaje con Angular, CSS, HTML, TypeScript, etc.</p>
-              <a href="#" class="btn btn-primary">Toca acá para ver</a>
             </div>
           </div>
         </div>
@@ -19,17 +21,15 @@
             <div class="card-body">
               <h5 class="card-title">Simulador de compra</h5>
               <p class="card-text">Este es un primer trabajo con JavaScript, es un simulador de eleccion de porducto y compra aplicando cuotas.</p>
-              <a href="#" class="btn btn-primary">Tocá aca para ver</a>
             </div>
           </div>
-        </div>s
+        </div>
         <div class="col">
           <div class="card-proyecto">
             <img src="../assets/IMG/ecomerce.png" class="card-img-top" alt="Ecomerce1">
             <div class="card-body">
               <h5 class="card-title">Ecomerce</h5>
               <p class="card-text">Fue un trabajo para el curso de JavaScript de CoderHouse. Logueo, seleccion de productos, agregar carrito, costo total de lo seleccionado. etc.</p>
-              <a href="#" class="btn btn-primary">Tocá para ver</a>
             </div>
           </div>
         </div>
@@ -39,10 +39,11 @@
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Este es mi portfolio web donde pueden ver todos mis proyectos y datos acerca de mi </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
         </div>
       </div>
+      <br>
+     <br>
+     
 
-      
