--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="login" id="loguin">
+<div class="login" id="login">
         <ul class="list-group list-group-horizontal align-items-center"></ul>
  <li class="list-group-item">
    <button type="button" class="btn btn-primary btn-sm p-2">
