--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,6 @@
-<app-header></app-header>
-<app-banner></app-banner>
-<app-acerca-de></app-acerca-de>
-<app-experiencia></app-experiencia>
-<app-educacion></app-educacion>
-<app-hard-soft-skills></app-hard-soft-skills>
-<app-proyectos></app-proyectos>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
+
+
  
   
         
