--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,15 +1,14 @@
 <div class="login" id="login">
-        <ul class="list-group list-group-horizontal align-items-center"></ul>
- <li class="list-group-item">
-   <button type="button" class="btn btn-primary btn-sm p-2">
-   <i class="fa-solid fa-user-lock fa-3x text-white" data-bs-toggle="modal"
-   data-bs-target="#exampleModal"></i>
-   </button>
-   </li>
+  <ul class="list-group list-group-horizontal align-items-center"></ul>
+<li class="list-group-item">
+<button type="button" class="btn btn-primary btn-sm p-2">
+  <i class="fa-solid fa-user-lock fa-3x text-white" data-bs-toggle="modal"
+data-bs-target="#exampleModal"></i>
+</button>
+</li>
 </div>
-                
-     <!-- Modal -->
- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
    <div class="modal-dialog">
      <div class="modal-content">
        <div class="modal-header">
@@ -30,9 +29,8 @@
            </div>
          </div>
        </div>
-       <div class="modal-footer">
-         <button type="button" class="btn btn-primary">Iniciar Sesion</button>
+         <button type="submit" class="btn btn-primary">Iniciar Sesion</button>
        </div>
      </div>
    </div>
- </div>
+ 
