model y service, y modificaciones varias

--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -3,8 +3,9 @@
     <br>
     <h2>Acerca de mí</h2>
     <div class="btn-edit"><a href="#" class="btn-right"><i class="fa fa-pen"></i></a></div>
-
- <div>
+    <div class="row">
+      <div class="container text-center">
+     
     <h6>
       Soy y una persona trabajadora y versátil, siendo capaz de adaptarme a cualquier ambiente,
       siempre dispuesta a aprender nuevas habilidades.
@@ -25,5 +26,6 @@
      
     </h6>
     <br>
+  </div>
   </div>
 </div>
