--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -5,14 +5,12 @@
         <div id="info-img">
           <img class="imagen-perfil" src="../assets/IMG/mifoto.jpg">
         </div>
-        <div class="yo">
-        <h2>Soy</h2>
-        <h1>Lorena&nbsp; Susana&nbsp; Vivas</h1>
-          <h3>Desarrolladora Full Stack Jr.</h3>
-        </div>
-
-        
-
+        <div class="yo" col-xs-12 col-sm-2 col-md-2 col-lg-2>
+          <h2>Soy</h2>
+          <p id="nombre">{{persona.nombre}} {{persona.apellido}}</p>
+          <h3>Full Stack Developer Jr</h3>
+      </div>
+      
 
         <div class="info-datos">
            
