--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,31 +1,37 @@
   <!--Sección Experiencia-->
   <div id="experiencia"  class="experiencia">
+    <div class="row">
     <h2>Experiencia Laboral</h2>
-    <br>
-     </div>
+      <button type="button" class="btn btn-dark" routerLink="/nuevaexp" *ngIf="isLogged">
+          Nueva Experiencia
+      </button>
+  </div>
+</div>
+
 <div class="container text-center">
-     <div class="row row-cols-1 row-cols-md-2 g-4">
+     <div class="row row-cols-1 row-cols-md-2 g-4"> 
       <div class="col">
-                <div class="mi-experiencia">
-                 <div class="card mb-3" >
-                  <div class="row g-0" id="tarjeta-experiencia">
-                    <div class="col-md-4">
-                      <img src="../assets/IMG/gcba.png" class="img-fluid rounded-start" alt="Escudo GCBA">
-                    </div>
-                    <div class="col-md-8">
-                      <div class="card-body">
-                        <h5 class="empleo">Docente</h5>
-                        <p class="descripcion-empleo">Administrativa, atención Secretaría Escolar, Técnica Aux. Bibliotecaria.Clases de Educación Fisica y talleres de danza</p>
-                        <p class="institucion-empleo">GCBA Ministerio de Educación</p> 
-                        <p class="tipo-empleo">Jornada completa</p> 
-                        <p class="fecha-empleo">Octubre 2012-actualidad</p> 
-                        <button type="button" class="btn btn-light"><a href="#" class="experiencia-laboral">Agregar Experiencia</a></button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+        <div class="mi-experiencia">
+          <div class="card mb-3">
+           <div class="row g-0" id="tarjeta-experiencia">
+             <div class="col-md-4">
+               <img src="../assets/IMG/megatlonlogo.jpg" class="img-fluid rounded-start" alt="Escudo GCBA">
+             </div>
+             <div class="col-md-8">
+               <div class="card-body">
+                <h5 class="empleo">Profesora</h5>
+                <p class="descripcion-empleo">Administrativa, atención Secretaría Escolar, Técnica Aux. Bibliotecaria.Clases de Educación Fisica y talleres de danza</p>
+                <p class="institucion-empleo">GCBA Ministerio de Educación</p> 
+                <p class="tipo-empleo">Jornada completa</p> 
+                <p class="fecha-empleo">Octubre 2012-actualidad</p> 
+                <button type="button" class="btn btn-light"><a href="#" class="experiencia-laboral">Agregar Experiencia</a></button>
+               </div>
               </div>
-       </div>
+            </div>
+          </div>
+        </div>
+       
+
        <div class="col">
               <div class="mi-experiencia">
                 <div class="card mb-3" >
@@ -48,3 +54,4 @@
              </div>
     </div>
      </div>
+     
