--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,20 +1,25 @@
-<header>
-    <div class="navbar navbar-expand-lg bg-secondary">
-        <div class="container-fluid">
-          <div class="navbar-brand" href="#">
-            <img src="../assets/IMG/arg-programaLogo.png">
-            <h4>#YoProgramo</h4>
-          </div>
-          <ul class="list-group list-group-horizontal"> 
-            <li class="list-group-item"><a href="https://github.com/LoreSVi/MiproyectoFrontEnd.git" target="_blank"><i class="fa-brands fa-github fa-3x"></i></a></li> 
-            <li class="list-group-item"><a href="https://www.linkedin.com/in/lorena-vivas-966880a4/" target="_blank"><i class="fa-brands fa-linkedin fa-3x"></i></a></li>
-            <li class="list-group-item"><a href="https://www.instagram.com/lorelolivs/" target="_blank"><i class="fa-brands fa-instagram fa-3x"></i></a></li>
-          
-          <app-login></app-login>
+<div class=" row">
+<nav class="container">
+  <div class="logo">
+      <img src="../../../assets/IMG/arg-programaLogo.png" alt="Logo Argentina Programa" id="logoAp" >
+    </div>
+    <div class="redes">
+    <ul class="list-group list-group-horizontal"> 
+     <li class="list-group-item"><a href="https://github.com/LoreSVi/MiproyectoFrontEnd.git" target="_blank"><i class="fa-brands fa-github fa-2xl"></i></a></li> 
+     <li class="list-group-item"><a href="https://www.linkedin.com/in/lorena-vivas-966880a4/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i></a></li>
+     <li class="list-group-item"><a href="https://www.instagram.com/lorelolivs/" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a></li>
+
+<!-- Login -->
+<li><button type="button" class="btn btn-dark"><a href="#"class="nav-link" (click)="login()" *ngIf="!isLogged" >Ingresar</a></button></li>
+<li><button type="button" class="btn btn-dark"><a href="#"class="nav-link" (click)="onLogOut()" *ngIf="isLogged" >Salir</a></button></li>
+      </ul>
+    </div>
+
         
           
-          </ul>
-        </div>
-    </div>
+          
+          
+          
+         
 
  
