--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -16,7 +16,7 @@
            
     
     <div class="segunda-tarjeta">
-      <ul class="navegacion">
+      <ul class="navbar navbar-expand-lg menulore"> 
         <li><button type="button" class="btn btn-dark"><a href="#sobre-mi" class="nav-link">Acerca de Mí</a></button></li>
         <li><button type="button" class="btn btn-dark"><a href="#experiencia" class="nav-link">Experiencia</a></button></li>
         <li><button type="button" class="btn btn-dark"><a href="#Educacion" class="nav-link">Educación</a></button></li>
