--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,7 +1,17 @@
-.container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: rgb(194,24,165);
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+.botonera{
+   background: rgb(194,24,165);
   background: linear-gradient(90deg, rgba(194,24,165,1) 0%, rgba(203,25,73,0.19389005602240894) 30%, rgba(217,43,137,0.13506652661064422) 50%, rgba(190,63,20,0.28352591036414565) 80%, rgba(240,201,236,0.04262955182072825) 100%);
 }
+  .botonera li a{
+    color:rgb(221, 26, 163);
+    padding: 0.5rem 0.5rem;
+           }
+
+           .botonera li a:hover{
+            color: blueviolet;
+           }
+
+     
+           
+
